// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders loading page when template is undefined 1`] = `<Loading />`;

exports[`renders preview page 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Edit Template",
      "to": "/path/to/edit",
    }
  }
  empty={Object {}}
  primaryAction={
    Object {
      "content": "Send Email",
      "disabled": false,
      "onClick": [Function],
    }
  }
  title="Test Template (Draft)"
>
  <Panel
    sectioned={true}
  >
    <TextField
      label="To"
      onChange={[Function]}
      placeholder="Send to recipient email addresses"
      required={false}
      resize="both"
      type="text"
      value=""
    />
    <TextField
      disabled={true}
      label="From"
      required={false}
      resize="both"
      type="text"
      value="test@example.com"
    />
    <TextField
      disabled={true}
      label="Subject"
      required={false}
      resize="both"
      type="text"
      value="Test Subject"
    />
    <PreviewPanel
      html="<html />"
      text=""
    />
  </Panel>
</Page>
`;

exports[`resets error message when user starts typing again 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Edit Template",
      "to": "/path/to/edit",
    }
  }
  empty={Object {}}
  primaryAction={
    Object {
      "content": "Send Email",
      "disabled": false,
      "onClick": [Function],
    }
  }
  title="Test Template (Draft)"
>
  <Panel
    sectioned={true}
  >
    <TextField
      label="To"
      onChange={[Function]}
      placeholder="Send to recipient email addresses"
      required={false}
      resize="both"
      type="text"
      value="new@example.com"
    />
    <TextField
      disabled={true}
      label="From"
      required={false}
      resize="both"
      type="text"
      value="test@example.com"
    />
    <TextField
      disabled={true}
      label="Subject"
      required={false}
      resize="both"
      type="text"
      value="Test Subject"
    />
    <PreviewPanel
      html="<html />"
      text=""
    />
  </Panel>
</Page>
`;
